--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "classnames": "^2.5.1",
+    "json-server": "^1.0.0-beta.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "sass": "^1.78.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
