--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "json-server": "^1.0.0-beta.2",
     "prop-types": "^15.8.1",
@@ -21,7 +22,6 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "sass": "^1.78.0"
   },
