--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
-    "json-server": "^1.0.0-beta.2",
+    "json-server": "0.17.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
